--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
 }
 
 body {
-    font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
     background: #E6EAE9;
 }
 
@@ -15,7 +15,6 @@ hr{ clear: both; display: block; margin: 10px 0;}
 a, img{border: none;}
 
 h1, h2, h3, h4, h5, h6, p, a, address{
-    font-family: "Tahoma";
     text-decoration: none;
 }
 
@@ -45,23 +44,23 @@ header{
 #logo a{
     display: block;
     margin-top: 10px;
- }
+}
 
- #logo p{
+#logo p{
     font-size: 11px;
- }
+}
 
 nav{
     clear: both;
     width: 100%;
-    height: 50px;
+    height: 40px;
     background-color: #CAE8EA;
+    border-bottom: 1px solid #FFFFFF;
 }
 
 nav ul{
     margin: 0 auto;
     width: 960px;
-    height: 60px;
 }
 
 nav li{
@@ -70,21 +69,32 @@ nav li{
 
 nav a{
     display: block;
-    color: #4f6b72;    
-    padding: 12px 15px;
-    font-size: 18px;    
+    color: #4f6b72;
+    padding: 8px 15px 10px 15px;
+    font-size: 18px;
+}
+
+nav a:hover{
+    -moz-border-top-left-radius: 8px;
+    -moz-border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background-color: #FFFFFF;
+    color: #000000;
 }
 
 #content{
     clear: both;
     margin: 0 auto;
     padding: 15px;
-    width: 960px;
+    width: 930px;
+    background-color: #FFFFFF;
 }
 
 footer{
     clear: both;
     margin: 0 auto;
+    border-top: 1px solid #FFFFFF;
     background-color: #CAE8EA;
     color: #4f6b72;
     text-align: center;
