--- a/css/tabela.css
+++ b/css/tabela.css
@@ -5,11 +5,11 @@ table {
     margin: 0 auto;
 }
 
-caption {
-    padding: 0 0 5px 0;
-    width: 700px;    
-    font: italic 11px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-    text-align: right;
+caption{
+    background-color: #CAE8EA;
+    font: italic 22px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #797268;
 }
 
 th {
@@ -25,13 +25,6 @@ th {
     background: #CAE8EA url(../imagens/bg_header.jpg) no-repeat;
 }
 
-th.nobg {
-    border-top: 0;
-    border-left: 0;
-    border-right: 1px solid #C1DAD7;
-    background: none;
-}
-
 td {
     border-right: 1px solid #C1DAD7;
     border-bottom: 1px solid #C1DAD7;
@@ -40,23 +33,8 @@ td {
     color: #4f6b72;
 }
 
-
-td.alt {
-    background: #F5FAFA;
-    color: #797268;
-}
-
-th.spec {
-    border-left: 1px solid #C1DAD7;
-    border-top: 0;
-    background: #fff url(../imagens/bullet1.gif) no-repeat;
-    font: bold 10px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-}
-
-th.specalt {
-    border-left: 1px solid #C1DAD7;
-    border-top: 0;
-    background: #f5fafa url(../imagens/bullet2.gif) no-repeat;
-    font: bold 10px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-    color: #797268;
+tfoot{
+    text-align: center;
+    background-color: #CAE8EA;
+    font-size: 14px;
 }
